# Job_parser

./: README.md  companies.txt  dbmanager.py  main.py  pyproject.toml
utils/: api.py  dbmanager.py  txt_reader.py
